--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -124,13 +124,33 @@ aside {
 
 //main-container全局样式
 .app-container {
+  display: flex;
   padding: 20px;
+  flex: 1;
 }
 
 .page-container {
   background: #fff;
-  padding: 16px 16px 0;
+  padding: 16px 16px;
   margin-bottom: 32px;
+  flex: 1;
+}
+
+.title-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 24px;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .el-form-item__content > div {
+    width: -webkit-fill-available;
+  }
 }
 
 .components-container {
@@ -188,12 +208,6 @@ aside {
 
 .filter-container {
   padding-bottom: 10px;
-
-  .filter-item {
-    display: inline-block;
-    vertical-align: middle;
-    margin-bottom: 10px;
-  }
 }
 
 //refine vue-multiselect plugin
